src/test/ui/rfc-2091-track-caller/error-with-naked.stderr
error[E0736]: cannot use `#[track_caller]` with `#[naked]`
  --> $DIR/error-with-naked.rs:5:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^

error[E0736]: cannot use `#[track_caller]` with `#[naked]`
  --> $DIR/error-with-naked.rs:14:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0736`.
